[package]
name = "ovl-extractor-3-rust"
version = "2.0.0"
edition = "2021"
description = "A tool for extracting and analyzing RCT3 OVL files"
authors = ["Original by OVL Extractor 2.0 team"]

[dependencies]
eframe = { version = "0.22.0", features = ["default_fonts", "persistence"] }  # egui framework for GUI
byteorder = "1.4"  # Reading binary data
anyhow = "1.0"    # Error handling
log = "0.4"       # Logging
env_logger = "0.10"  # Logging implementation
rfd = "0.11"      # File dialogs
winapi = { version = "0.3", features = ["winuser", "windef"] }  # Windows API bindings
